<resources>

    <string name="app_name">Context Monitoring Agent</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Context Monitoring Agent</string>
    <string name="setting">Setting</string>
    <string name="title_about">About</string>
    <string name="title_sensing_setting">SENSING</string>
    <string name="label_server_address"><b>Server address:</b></string>
    <string name="label_sensing_duration"><b>Sensing duration:</b></string>
    <string name="label_transfer_period"><b>Transfer period:</b></string>
    <string name="val_idle_state"><b>IDLE</b></string>
    <string name="val_monitoring_state"><b>MONITORING</b></string>
    <string name="title_context_info">Context Information</string>
    <string name="val_copyright">© 2013 SmartyLab</string>
    <string name="title_start_monitoring">Start Monitoring</string>
    <string name="setting_freq">Sensing frequency...</string>
    <string name="setting_adapive">Adaptive monitoring</string>
    <string name="setting_management">MANAGEMENT</string>
    <string name="setting_management_approach">Context monitoring approach...</string>
    <string name="setting_management_approach_sum">Select an approach in the list. Default: A2</string>
    <string name="transmission_setting">TRANSMISSION</string>
    <string name="context_list_setting">Context list…</string>
    <string name="context_list_setting_sum">Select contexts to be monitored</string>
    <string name="sensing_duration_setting">Sensing duration (s)…</string>
    <string name="sensing_duration_setting_sum">Enter sensing duration with seconds. The default value, \'0\' means sensing continuously.</string>
    <string name="sensing_duration_dialog">Sensing duration (s)</string>
    <string name="null_str">null</string>
    <string name="specific_duration_setting">Sensing for specific duration</string>
    <string name="server_address_setting">Server address…</string>
    <string name="server_address_setting_sum">Enter your server address.</string>
    <string name="server_address_setting_dialog">Server address</string>
    <string name="transfer_period_setting">Transfer period (s)…</string>
    <string name="transfer_period_setting_sum">Enter transfer period with milliseconds. Default: 0.5 (s), Minimum: 0.1 (s)</string>
    <string name="transfer_period_dialog">Transfer period (s)</string>
    <string name="context_setting_monitor_all">Monitor all</string>
    <string name="context_location">Location</string>
    <string name="context_acceleration">Acceleration</string>
    <string name="context_magnetic_field">Magnetic field</string>
    <string name="context_orientation">Orientation</string>
    <string name="context_gyroscope">Gyroscope</string>
    <string name="context_light">Light</string>
    <string name="context_pressure">Pressure</string>
    <string name="context_temperature">Device temperature</string>
    <string name="context_proximity">Proximity</string>
    <string name="context_gravity">Gravity</string>
    <string name="context_linear_acceleration">Linear Acceleration</string>
    <string name="context_rotation_vector">Rotation Vector</string>
    <string name="context_relative_humidity">Relative Humidity</string>
    <string name="context_ambient_temperature">Ambient Temperature</string>
    <string name="cancel_displaying_context_info">Cancel displaying context info</string>
    <string name="transfer_on_setting">Context transmission</string>
    <string name="about_full_text"><b><i>Context Monitoring Agent</i></b> is an Android application for helping developers who want to monitor mobile contexts.\n\n
        Visit smartylab.co.kr for more information.</string>
    <string name="ver">ver.1.2</string>

</resources>