<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray" >

    <RelativeLayout
        android:id="@+id/headerRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue" >

        <ImageButton
            android:id="@+id/startBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:contentDescription="@string/title_start_monitoring"
            android:padding="10dp"
            android:src="@drawable/ic_av_play" />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/startBt"
            android:text="@string/val_idle_state"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/settingBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/aboutBt"
            android:background="@drawable/button"
            android:contentDescription="@string/setting"
            android:padding="10dp"
            android:src="@drawable/ic_action_settings" />

        <ImageButton
            android:id="@+id/aboutBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:contentDescription="@string/title_about"
            android:padding="10dp"
            android:src="@drawable/ic_action_about" />

        <TextView
            android:id="@+id/elapsedTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/statusTv"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerRl"
        android:layout_above="@+id/dividerFooter" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/logTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/dividerFooter"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/copyrightLb"
        android:background="@color/white" />

    <TextView
        android:id="@+id/copyrightLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:gravity="right"
        android:text="@string/val_copyright"
        android:textColor="@color/blue"
        android:textSize="10sp" />

</RelativeLayout>